<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.oregonstate.restapp.MainActivity">

    <ListView
        android:id="@+id/list_cluster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_add_cluster" />

    <Button
        android:id="@+id/button_add_cluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_cluster"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/clusters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_above="@+id/list_sequence"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_add_cluster"
        android:layout_toStartOf="@+id/button_add_cluster" />

    <Button
        android:text="@string/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_logout"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_login"
        android:layout_toStartOf="@+id/button_login" />


</RelativeLayout>
